// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it matches snapshot (logged in) 1`] = `
<DocumentFragment>
  <nav
    class="Navbar"
  >
    <a
      aria-current="page"
      class="active"
      href="/"
    >
      Reptifeed
    </a>
    <button
      aria-describedby="popup-2"
    >
      My Stuff
    </button>
  </nav>
</DocumentFragment>
`;

exports[`it matches snapshot (logged out) 1`] = `
<DocumentFragment>
  <nav
    class="Navbar"
  >
    <a
      aria-current="page"
      class="active"
      href="/"
    >
      Reptifeed
    </a>
    <div>
      <a
        class=""
        href="/login"
      >
        Login
      </a>
      <a
        class=""
        href="/register"
      >
        Register
      </a>
    </div>
  </nav>
</DocumentFragment>
`;
